fixed z-index logo and navBar

--- a/next/beebank-on-next/src/main-css/globals.css
+++ b/next/beebank-on-next/src/main-css/globals.css
@@ -228,7 +228,7 @@ a:focus {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 101;
+  z-index: 99;
   position: relative;
 }
 
