--- a/next/beebank-on-next/src/main-css/privateNav.module.css
+++ b/next/beebank-on-next/src/main-css/privateNav.module.css
@@ -70,7 +70,10 @@
     width: 100%;
 }
 
-
+.navBar_Container{
+    position: relative;
+    z-index: 101;
+}
 @media screen and (max-width: 768px) {
     .logged_navbar__list {
         display: block;
